0804註冊登入中

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,3 +5,5 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 }
 
 @import './pages/register';
+@import './pages/login';
+@import './pages/frontLayout';
