--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,10 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+// Max width at which point
+// current size ends
+$breakpoint-xs: 576px !default;
+$breakpoint-sm: 767px !default;
+$breakpoint-md: 991px !default;
+$breakpoint-lg: 1199px !default;
