--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,3 +7,4 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './pages/register';
 @import './pages/login';
 @import './pages/frontLayout';
+@import './pages/admin';
