--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,3 +8,6 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './pages/login';
 @import './pages/frontLayout';
 @import './pages/admin';
+@import './pages/home';
+@import './pages/job';
+
