--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -1,13 +1,62 @@
-.q-carousel {
-  position: relative;
+// home page ----------------------------------------
+.home_page_container {
+  padding-top:0 !important;
+  .q-carousel {
+    position: relative;
+  }
+  .bg {
+    height: 100%;
+    width: 100%;
+    background: $primary;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: .9;
+  }
+  #banner{
+    width: 100%;
+    height: 90vh;
+  }
+//  banner內容區------------------------------------------------------
+  #banner_info {
+    // border: 1px solid white;
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1;
+    .q-input {
+      width: 40%;
+    }
+    .q-field__control{
+      border-radius: .6rem;
+    }
+    #search_btn{
+      border-radius: .6rem;
+      padding: 2rem 0 2rem 0;
+      width: 40%;
+    }
+  }
+  .logo {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    a {
+      background: url('@/assets/logo.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 100%;
+      min-width: 15%;
+      height: 100px;
+      text-indent: 101%;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+  }
 }
-.bg{
-  height: 85vh;
-  width: 100%;
-  background: $accent;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: .9;
-  // z-index: 100;
-}
+
+
+
+
+
