調後台版面

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,6 +3,9 @@
 body{
 font-family:'Ubuntu','Noto Sans TC', sans-serif;
 }
+// @import '@sweetalert2/themes/material-ui/material-ui.css';
+
+
 @import './general';
 
 @import './layouts/mainLayout';
