--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1,3 +1,20 @@
 .container{
   width: 1100px;
 }
+
+.swal2-styled.swal2-confirm{
+  border-radius: 0.5em !important;
+  background-color:#ff7e00 !important;
+}
+.q-card>.justify-end{
+  justify-content:center;
+}
+
+.q-btn:before{
+  box-shadow: none
+}
+
+.q-data-table td, .q-data-table th {
+  /* don't shorten cell contents */
+  white-space: normal !important;
+}
