--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1,16 +1,21 @@
-.container{
+.container {
+  width: 100%;
+  padding: 1rem;
+
+  @include lg {
   width: 1100px;
+  }
 }
 
-.swal2-styled.swal2-confirm{
+.swal2-styled.swal2-confirm {
   border-radius: 0.5em !important;
   background-color:#ff7e00 !important;
 }
-.q-card>.justify-end{
+.q-card>.justify-end {
   justify-content:center;
 }
 
-.q-btn:before{
+.q-btn:before {
   box-shadow: none
 }
 
