--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -6,7 +6,9 @@
   width: 1100px;
   }
 }
-
+.footer_logo {
+  width: 150px;
+}
 .swal2-styled.swal2-confirm {
   border-radius: 0.5em !important;
   background-color:#ff7e00 !important;
