--- a/src/css/pages/_admin.scss
+++ b/src/css/pages/_admin.scss
@@ -8,12 +8,12 @@
 }
 // AdminPage
 #admin_page{
-    min-width: 100%;
+    width: 100%;
   @media (min-width: $breakpoint-sm) {
-    min-width: 70%;
+    width: 70%;
   }
   @media (min-width: $breakpoint-md) {
-    min-width: 50%;
+    width: 50%;
   }
 }
 #birth{
@@ -21,12 +21,14 @@
 }
 
 // ApplicationStatus
-#helper_table{
+#helper_table,
+#host_table,
+#job_table {
   a {
     color: $dark;
     text-decoration: none;
   }
-  p{
+  p {
     margin: 0 0 8px;
   }
   .q-table th{
@@ -34,5 +36,8 @@
     font-size: .9rem;
     letter-spacing: .1rem;
   }
+  .q-card {
+    height: 100%;
 
+  }
 }
