--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -3,6 +3,14 @@
   padding-top:0 !important;
   .q-carousel {
     position: relative;
+    overflow: hidden;
+  }
+  .q-carousel__slide{
+    animation: scale 50s;
+  }
+  .q-panel {
+    overflow: hidden;
+    
   }
   .bg {
     height: 100%;
@@ -56,6 +64,14 @@
   }
 }
 
+@keyframes scale {
+  80%{
+    scale: 1.3;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 
 
