先調版面 明天寫搜尋

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,6 +11,8 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './layouts/mainLayout';
 @import './layouts/homeLayout';
 @import './layouts/adminLayout';
+@import './layouts/footer';
+
 
 @import './pages/register';
 @import './pages/login';
