--- a/src/css/layouts/_adminLayout.scss
+++ b/src/css/layouts/_adminLayout.scss
@@ -11,8 +11,11 @@
   }
   #camera {
     position: absolute;
-    right: -15%;
-    bottom: -15%;
+    right: -5%;
+    bottom: -5%;
+  }
+  #avatar {
+    display: none;
   }
   @include md {
     .q-drawer {
