--- a/src/css/pages/_admin.scss
+++ b/src/css/pages/_admin.scss
@@ -1,19 +1,20 @@
-.ql-editor{
-  height: 200px !important;
-}
-#post_jobs{
+#admin_layout {
   h5{
     margin-bottom: 1rem;
   }
 }
+.ql-editor{
+  height: 280px !important;
+}
+
 // AdminPage
-#admin_page{
+.form_container {
     width: 100%;
   @media (min-width: $breakpoint-sm) {
     width: 70%;
   }
   @media (min-width: $breakpoint-md) {
-    width: 50%;
+    width: 60%;
   }
 }
 #birth{
@@ -40,4 +41,9 @@
     height: 100%;
 
   }
+}
+
+// manage jobs
+#plus {
+text-align: right;
 }
