--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -19,4 +19,6 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './pages/admin';
 @import './pages/home';
 @import './pages/job';
+@import './pages/faqs';
+
 
