--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -24,8 +24,10 @@
   #banner{
     width: 100%;
     height: 90vh;
+    position: relative;
   }
 }
+
 //  banner內容區------------------------------------------------------
 #banner_info {
   // border: 1px solid white;
@@ -37,23 +39,32 @@
   z-index: 1;
 
   #search_btn_group{
-    padding: 2rem 0 2rem 0;
+    margin: 2rem 0 2rem 0;
     width: calc(100% - 50px);
+    border: 2px solid #fff;
+    border-radius: 8px;
     .q-btn--outline:before {
       border: 2px solid currentColor;
     }
-  }
-  .q-input {
-    width: calc(100% - 50px);
-    .q-field__control {
-      height: 50px !important;
+    .q-btn {
+      border-right:1px solid #fff;
+    }
+    .btn_right_none {
+      border-right: none;
     }
   }
-
   #search {
+    width: calc(100% - 50px);
     position: relative;
     .q-field__control {
       box-shadow: none;
+    }
+  }
+  .q-input {
+    // width: calc(100% - 50px);
+    width: 100%;
+    .q-field__control {
+      height: 50px !important;
     }
   }
 
@@ -67,37 +78,38 @@
     
   }
   
-.logo {
-  margin: 0;
-  display: inline-block;
-  justify-content: center;
-  line-height: 10rem;
-  width: 450px;
-  height: 100%;
-
-  a {
-    display: block;
-    background: url('@/assets/logo.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    width: 100%;
+  .logo {
+    margin: 0;
+    display: inline-block;
+    justify-content: center;
+    line-height: 10rem;
+    width: 80%;
     height: 100%;
-    text-indent: 101%;
-    overflow: hidden;
-    white-space: nowrap;
+  
+    a {
+      display: block;
+      background: url('@/assets/logo-home.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 100%;
+      width: 100%;
+      height: 100%;
+      text-indent: 101%;
+      overflow: hidden;
+      white-space: nowrap;
+    }
   }
-}
-// .city{
-//   width: 300px !important;
-// }
+  h2::before{
+    display: none;
+  }
+
 
   @include md {
-    #search_btn_group{
+    #search_btn_group,
+    #search {
       width: 500px;
     }
     .q-input {
-      width: 500px;
       .q-field__control {
         height: 60px !important;
       }
@@ -105,9 +117,91 @@
     #search_btn {
       height: 60px;
     }
+    .logo {
+      width: 450px;
+    }
+  }
+  @include lg {
+
   }
 }
+.btn_borderd {
+  border: 1px solid $primary !important;
+}
+.feature {
+  width: 150px;
+  height: 100px;
+  border-radius: 20px;
+}
+#guide {
+  
+  .action_area {
+    // border: 2px solid $white;
+    border-radius: 400px;
+    img {
+      width: 70px;
+      height: 70px;
+    }
+  }
+  .action {
+    width: 100%;
+    height: 150px;
+    padding: 1rem;
+    h5 {
+    transition: .5s;
+    display: block;
+    &:hover {
+      letter-spacing: .2rem;
+      }
+    }
 
+    @include lg {
+      height: 100%;
+      padding: 3rem 5rem;
+
+    }
+  }
+  .guide_helper {
+    border-color: $secondary;
+    border-width: 1px 0 1px 1px;
+    border-style: solid;
+    border-radius: 400px 0 0 400px;
+    // color: $secondary;
+    &:hover {
+      // background-color: rgba(32, 83, 117, 0.1);
+      background-color: rgba(255, 126, 0, 0.1);
+    }
+
+  }
+  .guide_host {
+    border-color: $primary;
+    border-width: 1px 1px 1px 0;
+    border-style: solid;
+    border-radius: 0 400px 400px 0;
+    &:hover {
+      // background-color: rgba(255, 126, 0, 0.1);
+      background-color: rgba(32, 83, 117, 0.1);
+
+    }
+
+  }
+}
+h2 {
+  position: relative;
+  text-align: center;
+  margin-bottom: 3rem;
+  &::before {
+    content: '';
+    width: 50px;
+    height: 2px;
+    background-color: $primary;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translate(-50%,0);
+    margin-top: 5px;
+  }
+}
 
 @keyframes scale {
   80%{
