--- a/src/css/pages/_job.scss
+++ b/src/css/pages/_job.scss
@@ -14,8 +14,30 @@
   -webkit-box-orient: vertical;
 }
 
-#find_job{
+#job_search_area {
+  border: 5px double $white;
+  width: 100%;
+  height: 200px;
+  border-radius: 16px;
+  padding: 2rem 3rem;
+  .search_class {
+    width: 100px;
+  }
+}
+
+.job_card {
+  .text-overline {
+    line-height: normal;
+  }
   .q-card__section{
-    height: 250px;
+    height: 200px;
+  }
+
+  img {
+    border-radius: 8px 8px 0 0 ;
+  }
+
+  .q-chip {
+    margin-left: 0;
   }
 }
