--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -20,5 +20,8 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './pages/home';
 @import './pages/job';
 @import './pages/faqs';
+@import './pages/about_us';
+@import './pages/contact_us';
+
 
 
