--- a/src/css/pages/_about_us.scss
+++ b/src/css/pages/_about_us.scss
@@ -1,26 +1,3 @@
-.main_banner {
-  position: relative;
-  .bg {
-    height: 300px;
-    width: 100%;
-    background: $primary;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: .8;
-  }
-  h2 {
-    color: #fff !important;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    &::after {
-      background-color: $secondary;
-    }
-  }
-
-}
 #about_us {
   h3 {
     margin-top: 0;
@@ -37,6 +14,21 @@
     border-radius: 8px;
     img {
       width: 800px;
+    }
+  }
+  .q-col-gutter-y-md > *, .q-col-gutter-md > * {
+    padding-top: 0;
+  }
+  .about_img {
+    padding-bottom: 2rem;
+  }
+
+  @include lg {
+    .row_reverse {
+      flex-direction: row-reverse;
+    }
+    .q-col-gutter-y-md > *, .q-col-gutter-md > * {
+      padding-top: 16px;
     }
   }
 }
