--- a/src/css/pages/_admin.scss
+++ b/src/css/pages/_admin.scss
@@ -2,12 +2,21 @@
   h5{
     margin-bottom: 1rem;
   }
+
 }
 
 .ql-container {
   min-height: 10rem;
   height: 100%;
-  
+  h2 {
+    text-align: left;
+    &::after {
+      display: none;
+    }
+    &:hover {
+      letter-spacing: 0rem;
+    }
+  }
   .ql-editor{
     min-height:200px;
     height: 300px;
