--- a/src/css/pages/_job.scss
+++ b/src/css/pages/_job.scss
@@ -47,3 +47,14 @@
     margin-left: 0;
   }
 }
+.job_description {
+  h2 {
+    text-align: left;
+    &::after {
+      display: none;
+    }
+    &:hover {
+      letter-spacing: 0rem;
+    }
+  }
+}
