繼續改搜尋

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -19,6 +19,7 @@ font-family:'Ubuntu','Noto Sans TC', sans-serif;
 @import './pages/admin';
 @import './pages/home';
 @import './pages/job';
+@import './pages/job_detail';
 @import './pages/faqs';
 @import './pages/about_us';
 @import './pages/contact_us';
