--- a/src/css/pages/_job.scss
+++ b/src/css/pages/_job.scss
@@ -3,6 +3,8 @@
     background-color: $secondary;
   }
 }
+
+// 卡片截斷設定
 .description{
   text-overflow: ellipsis;
   overflow: hidden;
@@ -18,19 +20,7 @@
   -webkit-box-orient: vertical;
 }
 
-#job_search_area {
-  width: 100%;
-  height: 100%;
-  border-radius: 16px;
-  padding-bottom: 2rem;
-  .search_class {
-    width: 100px;
-  }
-}
-.job_card_container {
-
-}
-
+// 工作小卡片
 .job_card {
   .text-overline {
     line-height: normal;
@@ -47,14 +37,15 @@
     margin-left: 0;
   }
 }
-.job_description {
-  h2 {
-    text-align: left;
-    &::after {
-      display: none;
-    }
-    &:hover {
-      letter-spacing: 0rem;
-    }
+
+
+#job_search_area {
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  padding-bottom: 2rem;
+  .search_class {
+    width: 100px;
   }
 }
+
